<resources>
    <string name="app_name">WLAN Connector</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="tell_user_turn_on_wifi_1">To see available network, turn on Wi-Fi.</string>
    <string name="no_wifi_found">No Wi-Fi network found.</string>
    <string name="sb_ask_user_location_permission">Permission needed to read Wi-Fi scan result.</string>
    <string name="dialog_enablewifi_message">If you want to turn on the Wi-Fi function and scan nearby Wi-Fi AP, please press OK.</string>
    <string name="dialog_enablewifi_message2">Wi-Fi will be turned on to save the config.</string>
    <string name="dialog_enablewifi_title">WLAN Connector</string>
    <string name="ok">OK</string>
    <string name="connect">Connect</string>
    <string name="string_continue">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_addnetwork_title">Add network</string>
    <string name="dialog_addnetwork_ssid">Network name (SSID)</string>
    <string name="dialog_addnetwork_eapmethod">EAP method</string>
    <string name="dialog_addnetwork_phase2authentication">Phase 2 authentication</string>
    <string name="dialog_addnetwork_cacertificate">CA certificate</string>
    <string name="dialog_addnetwork_subjectname">Subject name</string>
    <string name="dialog_addnetwork_identity">Identity</string>
    <string name="dialog_addnetwork_anonymousidentity">Anonymous identity</string>
    <string name="dialog_addnetwork_password">Password</string>

    <string-array name="EapMethod">
        <item>PEAP</item>
        <item>TTLS</item>
    </string-array>
    <integer-array name="EapMethodValues">
        <item>0</item>
        <item>2</item>
    </integer-array>
    <string-array name="Phase2Method">
        <item>MSCHAPV2</item>
        <item>GTC</item>
        <item>MSCHAP</item>
        <item>PAP</item>
    </string-array>
    <integer-array name="Phase2MethodValues">
        <item>3</item>
        <item>4</item>
        <item>2</item>
        <item>1</item>
    </integer-array>

    <string name="dialog_capabilities_mismatch">The network you have selected does not seems to be a enterprise network. If you need to connect to a home network, please use the system built-in Wi-Fi connector.</string>
    
    <string name="loadedcaname">CA loaded: </string>
    <string name="loadcafailed">Failed to load CA cert.</string>
    <string name="configsaved">WLAN config saved. </string>
    <string name="configsave_failed">Failed to save WLAN config. </string>
    <string name="turnon_wifi_failed">Failed to turn on Wi-Fi and WLAN config can not be saved.</string>
</resources>
